--- a/main/Modello/180_ZIP.ipynb
+++ b/main/Modello/180_ZIP.ipynb
@@ -397,7 +397,7 @@
     "    \"X1\" : X1\n",
     "}\n",
     "\n",
-    "\n",
+    "# require 40 min for iter_warmup=1000 and iter_sampling=2000\n",
     "fit = model_base.sample(data=data, chains=4, parallel_chains=4, \n",
     "    iter_warmup=300, iter_sampling=200)\n",
     "posterior_az = az.from_cmdstanpy(fit)"
@@ -960,6 +960,36 @@
    "source": [
     "lam = posterior_az['posterior']['lambda']\n",
     "lam"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "log_lik = fit.stan_variable(\"log_lik\")\n",
+    "print(type(log_lik))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a dictionary with log-likelihoods\n",
+    "log_likelihood_dict = {\"log_lik\": log_lik}\n",
+    "\n",
+    "# Create an InferenceData object directly\n",
+    "inference_data = az.from_dict(posterior={}, log_likelihood=log_likelihood_dict)\n",
+    "# Calcola e stampa WAIC\n",
+    "waic_result = az.waic(inference_data, var_name=\"log_lik\")\n",
+    "print(\"WAIC: \", waic_result)\n",
+    "\n",
+    "#          Estimate       SE\n",
+    "#elpd_waic -3114.86     0.00\n",
+    "#p_waic        5.51        -"
    ]
   },
   {
