ZIP_theta_update

--- a/main/Modello/180_ZIP.ipynb
+++ b/main/Modello/180_ZIP.ipynb
@@ -103,6 +103,7 @@
    "source": [
     "stations = X['Station']\n",
     "years = X['Year'] - 2009\n",
+    "month = X['Month'] - 3\n",
     "unique_values = sorted(set(stations))\n",
     "mapping_dict = {value: index + 1 for index, value in enumerate(unique_values)}\n",
     "transformed_stations = [mapping_dict[value] for value in stations]\n"
@@ -389,6 +390,8 @@
     "    \"P\": X_std.shape[1],\n",
     "    \"nyears\": 13,\n",
     "    \"nstations\": 45,\n",
+    "    # decommentare se si usa la versione theta vettore\n",
+    "    #\"month\" : month,\n",
     "    \"station\": transformed_stations,\n",
     "    \"year\": years,\n",
     "    \"y\": Y['Count_180'],\n",
