--- a/main/Modello/180_ZIP.ipynb
+++ b/main/Modello/180_ZIP.ipynb
@@ -104,6 +104,13 @@
     "stations = X['Station']\n",
     "years = X['Year'] - 2009\n",
     "month = X['Month'] - 3\n",
+    "# If we want to consider summer/not summer months.\n",
+    "# If so change the lenght of thetha vector and the upper value for the months in the stan model \n",
+    "#for i in range(len(month)):\n",
+    "#       if month[i] == 1 or month[i] == 2 or month[i] == 6:\n",
+    "#            month[i] = 1\n",
+    "#        else:\n",
+    "#            month[i] = 2\n",
     "unique_values = sorted(set(stations))\n",
     "mapping_dict = {value: index + 1 for index, value in enumerate(unique_values)}\n",
     "transformed_stations = [mapping_dict[value] for value in stations]\n"
