--- a/main/Modello/120_extra_models.ipynb
+++ b/main/Modello/120_extra_models.ipynb
@@ -3240,18 +3240,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 185,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "00:56:18 - cmdstanpy - INFO - compiling stan file C:\\Users\\matte\\Desktop\\Bayesian_Stat\\Bayesian_Project\\main\\Modello\\stan\\ologit.stan to exe file C:\\Users\\matte\\Desktop\\Bayesian_Stat\\Bayesian_Project\\main\\Modello\\stan\\ologit.exe\n",
+      "00:57:53 - cmdstanpy - INFO - compiled model executable: C:\\Users\\matte\\Desktop\\Bayesian_Stat\\Bayesian_Project\\main\\Modello\\stan\\ologit.exe\n"
+     ]
+    }
+   ],
    "source": [
     "model_120_ologit = FetchModel('ologit').compile()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 186,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "00:57:54 - cmdstanpy - INFO - CmdStan start processing\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "77547c731d0e49429d6aeb3eff150b0e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "chain 1 |          | 00:00 Status"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1b9a5568d0234dc49888dd6ec20b1b11",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "chain 2 |          | 00:00 Status"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8f06e7d7568a4eacbcc1c058b8b2996a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "chain 3 |          | 00:00 Status"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "9bcdd780f2aa4dc18411f572d459eafc",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "chain 4 |          | 00:00 Status"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "data_120_ologit = {\n",
     "    \"N\": len(Y_obs),\n",
@@ -3453,7 +3526,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "0.0.0"
   }
  },
  "nbformat": 4,
