--- a/main/Modello/Final_Models.ipynb
+++ b/main/Modello/Final_Models.ipynb
@@ -5405,7 +5405,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "stan",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -5419,7 +5419,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
