--- a/main/Modello/Final_Models.ipynb
+++ b/main/Modello/Final_Models.ipynb
@@ -102,7 +102,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_180 = FetchModel(\"space_miss\").compile()"
+    "model_180 = FetchModel(\"zip_miss\").compile()"
    ]
   },
   {
@@ -214,7 +214,7 @@
     "    \"P\": X_obs.shape[1],\n",
     "    \"nyears\": 13,\n",
     "    \"nstations\": 45,\n",
-    "    \"station\": stations_obs,\n",
+    "    \"stations\": stations_obs,\n",
     "    \"year\": years_obs,\n",
     "    \"max_month\": max_month_obs,\n",
     "    \"station_miss\": stations_miss,\n",
@@ -224,11 +224,14 @@
     "    \"X_miss\": X_miss,\n",
     "    \"X\": X_obs,\n",
     "    \"phi\": phi,\n",
-    "    \"distances\": distances\n",
+    "    \"distances\": distances,\n",
+    "    \"nmonths\" : 7,\n",
+    "    \"month\" : months_obs,\n",
+    "    \"month_miss\" : months_miss\n",
     "}\n",
     "\n",
     "fit_180 = model_180.sample(data=data_180, chains=4, parallel_chains=4, \n",
-    "    iter_warmup=500, iter_sampling=500)\n",
+    "    iter_warmup=1000, iter_sampling=1000)\n",
     "posterior_180 = az.from_cmdstanpy(fit_180)"
    ]
   },
