--- a/main/Modello/Zip_CI.ipynb
+++ b/main/Modello/Zip_CI.ipynb
@@ -2883,9 +2883,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'post_pred' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m alpha \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0.05\u001b[39m\n\u001b[1;32m----> 2\u001b[0m theta_med \u001b[38;5;241m=\u001b[39m post_pred\u001b[38;5;241m.\u001b[39mposterior_med\u001b[38;5;241m.\u001b[39mtheta\u001b[38;5;241m.\u001b[39mvalues\n\u001b[0;32m      3\u001b[0m alpha_adj \u001b[38;5;241m=\u001b[39m (alpha\u001b[38;5;241m+\u001b[39mtheta_med\u001b[38;5;241m-\u001b[39malpha\u001b[38;5;241m*\u001b[39mtheta_med)\n\u001b[0;32m      4\u001b[0m quantiles_per_month \u001b[38;5;241m=\u001b[39m [post_pred\u001b[38;5;241m.\u001b[39mposterior\u001b[38;5;241m.\u001b[39my_pred\u001b[38;5;241m.\u001b[39mquantile([alpha_adj[i]\u001b[38;5;241m/\u001b[39m\u001b[38;5;241m2\u001b[39m, \u001b[38;5;241m1\u001b[39m\u001b[38;5;241m-\u001b[39malpha_adj[i]\u001b[38;5;241m/\u001b[39m\u001b[38;5;241m2\u001b[39m], dim\u001b[38;5;241m=\u001b[39m[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mchain\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdraw\u001b[39m\u001b[38;5;124m'\u001b[39m])\u001b[38;5;241m.\u001b[39mvalues \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m0\u001b[39m, \u001b[38;5;28mlen\u001b[39m(alpha_adj))]\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'post_pred' is not defined"
+     ]
+    }
+   ],
    "source": [
     "alpha = 0.05\n",
     "theta_med = post_pred.posterior_med.theta.values\n",
