--- a/main/Modello/binomial_120.ipynb
+++ b/main/Modello/binomial_120.ipynb
@@ -2694,8 +2694,7 @@
    ],
    "source": [
     "y_obs, residuals, mse, mae, mad, outliers, percentage_inside = metrics.values()\n",
-    "print(f'Outliers:\\n{outliers}\\n')\n",
-    "print(f'The total number of outliers is: {len(outliers)}\\n')\n",
+    "print(f'The percentage of outliers is: {len(outliers)/}\\n')\n",
     "print(f'The MSE is: {mse}\\n')\n",
     "print(f'The MAE is: {mae}\\n')\n",
     "print(f'The MAD is: {mad}\\n')\n",
@@ -5307,7 +5306,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "stan",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -5321,7 +5320,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
