--- a/main/Modello/Final_models_SIS.ipynb
+++ b/main/Modello/Final_models_SIS.ipynb
@@ -5760,7 +5760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [
     {
@@ -5775,12 +5775,14 @@
     }
    ],
    "source": [
+    "# add a left margin to the plot\n",
     "plt.errorbar(betas_180.median(dim='sample'), np.arange(2, len(covariates)*4 - 1, 4), xerr=[betas_180.median(dim='sample') - betas_180.quantile(0.025, dim='sample'), betas_180.quantile(0.975, dim='sample') - betas_180.median(dim='sample')], fmt='o', label='180')\n",
     "plt.errorbar(betas_120.median(dim='sample'), np.arange(0, len(covariates)*4 - 3, 4), xerr=[betas_120.median(dim='sample') - betas_120.quantile(0.025, dim='sample'), betas_120.quantile(0.975, dim='sample') - betas_120.median(dim='sample')], fmt='o', label='120')\n",
     "plt.yticks(np.arange(1, len(covariates)*4 - 2, 4), covariates)\n",
     "plt.hlines(np.arange(-1, len(covariates)*4, 4), xmin=-1, xmax=2.5, colors='gray', linestyles='dotted')\n",
     "plt.vlines(0, ymin=-1, ymax=len(covariates)*4-1, colors='black', linestyles='--')\n",
     "plt.legend(loc='lower right')\n",
+    "plt.savefig('betas_CI.pdf', bbox_inches='tight')\n",
     "plt.show()"
    ]
   }
